# uprompt

./: LICENSE  README.md  pyproject.toml
tests/: test_patterns.py
uprompt/: __init__.py  core.py  patterns.py  test.py
