[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uprompt"
version = "0.1.0"
description = "A Python library of prompt engineering patterns for LLMs"
authors = [
  { name="Your Name", email="you@example.com" }
]
license = { text="MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]