[project]
name = "uprompt"
version = "0.1.0"
description = "Python library for prompt engineering design patterns"
readme = "README.md"
authors = [
  { name="Jelena Mirceta", email="jelena.mirceta@gmail.com" }
]
license = { file="LICENSE" }
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=61.0","wheel"]
build-backend = "setuptools.build_meta"
